--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    CONTENT
+    <main>
+      <div>kaire</div>
+      <div>desine</div>
+    </main>
   </body>
 </html>
