--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <main>
-      <div>kaire</div>
-      <div>desine</div>
+    <main class="container">
+      <div class="left-column">kaire</div>
+      <div class="right-column">desine</div>
     </main>
   </body>
 </html>
