--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
   </head>
   <body>
     <main class="container">
-      <div class="left-column">kaire</div>
+      <div class="left-column">
+        <h1 class="main-title">Sign Up</h1>
+        <div>
+          <a href="#">Privacy policy</a>
+          <span>&amp;</span>
+          <a href="#">terms of service</a>
+        </div>
+      </div>
       <div class="right-column">desine</div>
     </main>
   </body>
