--- a/index.html
+++ b/index.html
@@ -41,7 +41,25 @@
       </div>
       <div class="right-column">
         <div class="close">x</div>
-        <form class="form">Registracijos forma</form>
+        <form class="form">
+          <div class="form-row">
+            <label for="">Username</label>
+            <input type="text" placeholder="Your text..." />
+          </div>
+          <div class="form-row">
+            <label for="">Email</label>
+            <input type="email" placeholder="Your text..." />
+          </div>
+          <div class="form-row">
+            <label for="">Password</label>
+            <input type="password" placeholder="Your text..." />
+          </div>
+          <div class="form-row">
+            <label for="">Repeat Password</label>
+            <input type="password" placeholder="Your text..." />
+          </div>
+          <div class="form-row"></div>
+        </form>
       </div>
     </main>
   </body>
