--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/btn.css" />
     <link rel="stylesheet" href="./css/form.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -43,22 +44,46 @@
         <div class="close">x</div>
         <form class="form">
           <div class="form-row">
-            <label for="">Username</label>
-            <input type="text" placeholder="Your text..." />
+            <label for="username">Username</label>
+            <input
+              id="username"
+              type="text"
+              placeholder="Your username..."
+              required
+            />
           </div>
           <div class="form-row">
-            <label for="">Email</label>
-            <input type="email" placeholder="Your text..." />
+            <label for="email">Email</label>
+            <input
+              id="email"
+              type="email"
+              placeholder="Your email..."
+              required
+            />
           </div>
           <div class="form-row">
-            <label for="">Password</label>
-            <input type="password" placeholder="Your text..." />
+            <label for="pass">Password</label>
+            <input
+              id="pass"
+              type="password"
+              placeholder="Your password..."
+              required
+            />
           </div>
           <div class="form-row">
-            <label for="">Repeat Password</label>
-            <input type="password" placeholder="Your text..." />
+            <label for="re-pass">Repeat Password</label>
+            <input
+              id="re-pass"
+              type="password"
+              placeholder="Repeat your password..."
+              required
+            />
           </div>
-          <div class="form-row"></div>
+          <div class="form-row">
+            <button class="btn" type="submit">Register now</button>
+            <span>or</span>
+            <a href="#">Sign In</a>
+          </div>
         </form>
       </div>
     </main>
