--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <img class="img-bck" src="./img/hill.png" alt="" />
     <main class="container">
       <div class="left-column">
         <h1 class="main-title">Sign Up</h1>
