--- a/forgot-password/index.html
+++ b/forgot-password/index.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign</title>
+    <title>Forgot Password</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./favicon/apple-touch-icon.png"
+      href="../favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./favicon/favicon-32x32.png"
+      href="../favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./favicon/favicon-16x16.png"
+      href="../favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./favicon/site.webmanifest" />
+    <link rel="manifest" href="../favicon/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/btn.css" />
-    <link rel="stylesheet" href="./css/form.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="../css/btn.css" />
+    <link rel="stylesheet" href="../css/form.css" />
+    <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
-    <img class="img-bck" src="./img/hill.png" alt="" />
+    <img class="img-bck" src="../img/hill.png" alt="" />
     <main class="container">
       <div class="left-column">
-        <h1 class="main-title">Sign Up</h1>
+        <h1 class="main-title">Forgot Password?</h1>
         <div class="bottom-links">
           <a class="link" href="#">Privacy policy</a>
           <span>&amp;</span>
@@ -45,15 +45,6 @@
         <div class="close">x</div>
         <form class="form">
           <div class="form-row">
-            <label for="username">Username</label>
-            <input
-              id="username"
-              type="text"
-              placeholder="Your username..."
-              required
-            />
-          </div>
-          <div class="form-row">
             <label for="email">Email</label>
             <input
               id="email"
@@ -63,27 +54,9 @@
             />
           </div>
           <div class="form-row">
-            <label for="pass">Password</label>
-            <input
-              id="pass"
-              type="password"
-              placeholder="Your password..."
-              required
-            />
-          </div>
-          <div class="form-row">
-            <label for="re-pass">Repeat Password</label>
-            <input
-              id="re-pass"
-              type="password"
-              placeholder="Repeat your password..."
-              required
-            />
-          </div>
-          <div class="form-row">
-            <button class="btn" type="submit">Register now</button>
+            <button class="btn" type="submit">Recover</button>
             <span>or</span>
-            <a href="./login/">Sign In</a>
+            <a href="../index.html">Register</a>
           </div>
         </form>
       </div>
